--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,21 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>2.5.0</version>
+                <configuration>
+                    <to>
+                        <image>${image.path}</image>
+                    </to>
+                    <container>
+				        <ports>
+				            <port>8081</port>
+				        </ports>
+				    </container>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 
