--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.microservice.frontend</groupId>
 	<artifactId>microservice-frontend</artifactId>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<version>0.0.1</version>
 	<name>microservice-frontend</name>
 	<description>Microservice Frontend</description>
