update pom 8080 container springboot

--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			<plugin>
+			<!-- <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
                 <version>2.5.0</version>
@@ -74,7 +74,7 @@
 				        </ports>
 				    </container>
                 </configuration>
-            </plugin>
+            </plugin> -->
 		</plugins>
 	</build>
 
